[Add] timer and scoring DOM [TODO] implement timer and calculate the score according to time and ?

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<button id="btn-start">Start</button>
 		</div>
 		<div id="game-over">
+			<h2 id="final-score">final-score</h2>
 			<h1>Game Over</h1>
 			<button id="btn-restart">Restart</button>
 		</div>
@@ -27,6 +28,8 @@
 			<button id="btn-nuclear-plant">Nuclear Power Plant</button><button id="btn-university">University</button><button id="btn-research-center">Research Center</button><button id="btn-cheung-kong">Cheung Kong (Holdings) Limited</button>
 		</div>
 		<div id="score-bar" class="clearfix">
+			<span id ="timer">timer</span>
+			<hr>
 			<span class="title">HSI</span>
 			<span id="hsi">-</span>
 			<hr>
